Closed Bug 333253 Opened 20 years ago Closed 19 years ago

two NS_WARNINGs for each file: URL icon on personal toolbar (icon decoder)

Categories

(Core :: Graphics: ImageLib, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

Attachments

(2 files, 1 obsolete file)

In cairo-gtk2 builds (as opposed to non-cairo gtk2 builds), I see the following pair of NS_WARNINGs on startup for each (non-directory?) file: URL on my personal toolbar: WARNING: NS_ENSURE_TRUE(buf_end - data >= PRInt32(bpr + abpr) * height) failed: file /builds/trunk/mozilla/modules/libpr0n/decoders/icon/nsIconDecoder.cpp, line 146 WARNING: NS_ENSURE_TRUE(mSuspendCount > 0) failed: file /builds/trunk/mozilla/netwerk/base/src/nsInputStreamPump.cpp, line 228 The first one may need to be moved into the #ifdefs and an appropriate alternative written for the cairo codepath, but the second one really makes it seem like there's a bug somewhere as well.
note that this seems to require a no-places build
the patch in bug 343599 fixes the mSuspendCount warning
Depends on: 343599
i think the 2nd one results from the 1st...
Attached patch fixSplinter Review
Attachment #246335 - Flags: review?(vladimir)
(In reply to comment #3) > i think the 2nd one results from the 1st... sure, but it was also a bug in the input stream pump.
fixed
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
backed out real fix in progress.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Attached patch work in progress (obsolete) — Splinter Review
Here's work in progress for a real fix -- in theory, it might work (except for OS/2), but I've tested it so far only on little-endian cairo-gtk2 (i686 Linux).
It also seems to work correctly on Mac PPC. (Well, I'm seeing a slight compositing glitch, but the R, G, and B channels are pretty clearly the right way around, and the fully opaque and fully transparent parts are fine.)
Comment on attachment 250797 [details] [diff] [review] work in progress So this isn't quite right because the cairo format wants premultiplied alpha, but this isn't.
Attachment #250797 - Flags: review?(pavlov)
Attached patch patchSplinter Review
Assignee: pavlov → dbaron
Attachment #250797 - Attachment is obsolete: true
Status: REOPENED → ASSIGNED
Comment on attachment 250869 [details] [diff] [review] patch Yep, fixing the premultiplication fixed the glitches on Mac, and I can't tell the difference on Linux (although I was looking at very small icons to tell that it worked).
Attachment #250869 - Flags: review?(pavlov)
Attachment #250869 - Flags: review?(pavlov) → review+
Fix checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago19 years ago
Resolution: --- → FIXED
Note, the os2 icon decoder is not 'NOT_IMPLEMENTED' for Cairo, so this needs a separate bug?
'not NOT_IMPLEMENTED' -> 'now NOT_IMPLEMENTED'
Depends on: 411332
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: