move ns_ensure_true in to the right block. bug 333253. r=vlad